# SlicerAdaptiveBrush

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  algorithm_profiles.json  gold_standard_seeds.json  pyproject.toml  requirements-dev.txt
.claude/agents/: algorithm-improver.md  bug-fixer.md  code-quality-reviewer.md  docs-validator.md  documentation-auditor.md  documentation-generator.md  gold-standard-curator.md  medical-compliance-reviewer.md  metrics-optimizer.md  reviewer-bug-fixer.md  reviewer-test-analyst.md  test-reviewer.md  ui-improver.md
.claude/skills/: add-test.md  implement-effect.md  run-tests.md  slicer-sync.md
.github/scripts/: package_extension.py
.github/workflows/: ci.yml  docs.yml  package-extension.yml  screenshots.yml  tests.yml
Screenshots/: .gitkeep  README.md
SegmentEditorAdaptiveBrush/: CMakeLists.txt  SegmentEditorAdaptiveBrush.py
SegmentEditorAdaptiveBrush/Resources/UI/: SegmentEditorAdaptiveBrush.ui
SegmentEditorAdaptiveBrush/SegmentEditorAdaptiveBrushLib/: DependencyManager.py  EmbeddedWizardUI.py  IntensityAnalyzer.py  ParameterRecommender.py  ParameterWizard.py  PerformanceCache.py  SampleDataSources.py  SegmentEditorEffect.py  WizardAnalyzer.py  WizardDataStructures.py  WizardSampler.py  WizardUI.py  __init__.py
SegmentEditorAdaptiveBrush/Testing/Python/: conftest.py  test_action_recipe.py  test_adaptive_algorithm.py  test_auto_threshold.py  test_dependency_manager.py  test_intensity_analyzer.py  test_parameter_recommender.py  test_segment_editor_effect.py  test_stepping_runner.py  test_ui_configuration.py  test_wizard_analyzer.py  test_wizard_data_structures.py
SegmentEditorAdaptiveBrush/Testing/Python/test_fixtures/: __init__.py  synthetic_image.py
SegmentEditorAdaptiveBrushNurbs/: CMakeLists.txt  SegmentEditorAdaptiveBrushNurbs.py
SegmentEditorAdaptiveBrushNurbs/SegmentEditorAdaptiveBrushNurbsLib/: BranchTemplates.py  ContainmentValidator.py  HexMeshGenerator.py  NurbsVolumeBuilder.py  QualityMetrics.py  SkeletonExtractor.py  StructureDetector.py  Visualization.py  __init__.py
SegmentEditorAdaptiveBrushNurbs/SegmentEditorAdaptiveBrushNurbsLib/Exporters/: CadExporter.py  MeshExporter.py  MfemExporter.py  __init__.py
SegmentEditorAdaptiveBrushNurbs/Testing/: CMakeLists.txt
SegmentEditorAdaptiveBrushNurbs/Testing/Python/: conftest.py  test_nurbs_volume.py
SegmentEditorAdaptiveBrushReviewer/: CMakeLists.txt  SegmentEditorAdaptiveBrushReviewer.py
SegmentEditorAdaptiveBrushReviewer/SegmentEditorAdaptiveBrushReviewerLib/: ComparisonMetrics.py  ContourRenderer.py  DICOMLabelMapSegPlugin.py  DicomManager.py  ModelGrouping.py  RatingManager.py  ResultsLoader.py  ScreenshotViewer.py  SequenceRecorder.py  VisualizationController.py  __init__.py
SegmentEditorAdaptiveBrushTester/: CMakeLists.txt  README.md  SegmentEditorAdaptiveBrushTester.py
SegmentEditorAdaptiveBrushTester/ExternalGoldStandards/: README.md
SegmentEditorAdaptiveBrushTester/GoldStandards/: README.md
SegmentEditorAdaptiveBrushTester/LabNotebooks/: comprehensive_opt_20260125_054918.md  gold_standard_MRBrainTumor1_tumor.md
SegmentEditorAdaptiveBrushTester/PublicDatasets/: .gitignore  README.md
SegmentEditorAdaptiveBrushTester/SegmentEditorAdaptiveBrushTesterLib/: ActionRecipe.py  ActionRecorder.py  AlgorithmCharacterizer.py  AlgorithmProfile.py  AlgorithmReportGenerator.py  GoldStandardManager.py  LabNotebook.py  MetricsCollector.py  OptimizationConfig.py  OptunaOptimizer.py  ParameterOptimizer.py  Recipe.py  RecipeRecorder.py  RecipeRunner.py  RecipeTestRunner.py  ReportGenerator.py  ScreenshotCapture.py  SegmentationMetrics.py  SteppingRecipeRunner.py  TestCase.py  TestContext.py  TestRegistry.py  TestRunFolder.py  TestRunner.py  __init__.py
SegmentEditorAdaptiveBrushTester/TestCases/: README.md  __init__.py  test_algorithm_all.py  test_algorithm_watershed.py  test_brush_visualization.py  test_dicom_cache.py  test_docs_algorithms.py  test_docs_getting_started.py  test_docs_reviewer.py  test_docs_ui_reference.py  test_docs_workflows.py  test_gold_statistics.py  test_optimization_tumor.py  test_painting_operations.py  test_regression_gold.py  test_reviewer_integration.py  test_reviewer_ui_bookmarks.py  test_reviewer_ui_keyboard.py  test_reviewer_ui_rating.py  test_reviewer_ui_slice_navigation.py  test_reviewer_ui_visualization.py  test_reviewer_ui_workflow_playback.py  test_reviewer_unit_bookmarks.py  test_reviewer_unit_sequence.py  test_reviewer_unit_viewgroup.py  test_ui_options_panel.py  test_wizard_workflow.py  test_workflow_basic.py
SegmentEditorAdaptiveBrushTester/configs/: comprehensive_all_algorithms.yaml  comprehensive_alt_clicks.yaml  default.yaml  idc_ct_bone.yaml  idc_ct_lung.yaml  idc_ct_soft_tissue.yaml  idc_ct_vessel_contrast.yaml  idc_mri_t1gd_tumor.yaml  idc_mri_t2_lesion.yaml  idc_pet_tumor.yaml  per_algorithm_optimization.yaml  quick_test.yaml  tumor_optimization.yaml  watershed_focused.yaml
SegmentEditorAdaptiveBrushTester/recipes/: __init__.py  brain_tumor_1.py  brain_tumor_1_alt.py  brain_tumor_combined.py  brain_tumor_threshold.py  ctacardio_left_ventricle.py  ctchest_bone.py  (+12 more)
_reference/: .gitignore  .setup.json.example  README.md
docs/: testing-requirements.md
scripts/: batch_optimization.py  capture_screenshots.py  check_optimization_progress.py  comprehensive_optimization.py  compute_gold_statistics.py  create_gold_standard.py  download_public_datasets.py  explore_sample_data.py  extract_screenshots_for_docs.py  find_tumor_coordinates.py  generate_algorithm_docs.py  generate_api_docs.py  generate_segmentation_review_screenshots.py  generate_ui_docs.py  install_deps.py  optimize_clicks.py  optimize_segmentation.py  optimize_watershed.py  prepare_idc_data.py  run_all_idc_optimization.sh  run_full_optimization_suite.sh  run_in_slicer.sh  run_optimization.py  run_review_screenshots.py  run_reviewer_tests.py  run_tests.py  save_gold_standard.py  test_dicom_labelmap.py  update_screenshots.sh  validate_docs.py  validate_extension.sh
(+79 files in other folders)
